[package]
name = "git-releasenotes"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
octocrab = "0.38"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
gix = "0.66"
regex = "1"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"

